[package]
name = "coleus"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dircpy = "0.3.19"
mdbook = "0.4.40"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"
