[package]
name = "coleus"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "coleus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dircpy = "0.3.19"
mdbook = "0.4.40"
pulldown-cmark = "0.12.0"
pulldown-cmark-to-cmark = "16.0.1"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
toml = "0.8.19"
